--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <a href="#contatos" class="menu-link">Contato</a>
             </li>
             <li>
+                <a href="https://www.instagram.com/ricx_f.n?igsh=MTYwM2twYTNvNTFwNA==" class="menu-link">Social</a>
+            </li>
+            <li>
                 <a href="https://drive.google.com/file/d/1FozmTAmapZraU1lWHh_CAA94EoZ4rBRC/view?usp=sharing" class="menu-link">Curriculum Vitae</a>
             </li>
         </ul>
