mod nas descrições

--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
             <div class="projetos-card">
                 <img src="./img/p-morse.png" alt="projeto1" class="projeto-imagem">
                 <div class="caixa-textos-projetos">
-                    <h3 class="info-projetos">Alerta codigo Morse em Python</h3>
+                    <h3 class="info-projetos">Alerta de codigo Morse em Python</h3>
                     <p class="paragrafo-projeto">Este aplicativo consiste em exibir msg em morse que são digitados em português e também com aletas luminosos.</p>
                 </div>
             </div>
 
             <div class="projetos-card">
-                <img src="./img/p-mobile.png" alt="projeto1" class="projeto-imagem">
+                <img src="./img/none.jpg" alt="projeto1" class="projeto-imagem">
                 <div class="caixa-textos-projetos">
-                    <h3 class="info-projetos">Projeto 3</h3>
-                    <p class="paragrafo-projeto">Descrição do projeto 3</p>
+                    <h3 class="info-projetos">Blank</h3>
+                    <p class="paragrafo-projeto">Blank</p>
                 </div>
             </div>
 
