add links as img dos projetos

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
         <h2 class="projetos-titulo">Meus Projetos</h2>
         <div class="projetos-caixa">
             <div class="projetos-card">
-                <img src="./img/p-mobile.png" alt="projeto1" class="projeto-imagem">
+                <a href="https://github.com/RICX-FN/FN/tree/main/PF13/pf13" target="_blank" class="projeto-imagem">
+                    <img src="./img/p-mobile.png" alt="projeto1" class="projeto-imagem">
+                </a>
                 <div class="caixa-textos-projetos">
                     <h3 class="info-projetos">Projeto Mobile com Cordova</h3>
                     <p class="paragrafo-projeto">Uma app de recruta de funcionarios com IA, com intuito de abrangir o
@@ -65,7 +67,9 @@
             </div>
 
             <div class="projetos-card">
-                <img src="./img/p-morse.png" alt="projeto1" class="projeto-imagem">
+                <a href="https://github.com/RICX-FN/FN/tree/main/PT%20COD%20MORSE" target="_blank" class="projeto-imagem">
+                    <img src="./img/p-morse.png" alt="projeto2" class="projeto-imagem">
+                </a>
                 <div class="caixa-textos-projetos">
                     <h3 class="info-projetos">Alerta de codigo Morse em Python</h3>
                     <p class="paragrafo-projeto">Este aplicativo consiste em exibir msg em morse que são digitados em português e também com aletas luminosos.</p>
