Add Projeto IA, chat inteligente

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
             </div>
 
             <div class="projetos-card">
-                <img src="./img/none.jpg" alt="projeto1" class="projeto-imagem">
+                <img src="./img/p-IA.png" alt="projeto3" class="projeto-imagem">
                 <div class="caixa-textos-projetos">
-                    <h3 class="info-projetos">Blank</h3>
-                    <p class="paragrafo-projeto">Blank</p>
+                    <h3 class="info-projetos">IA Chat Cientifico</h3>
+                    <p class="paragrafo-projeto">Um chat Mobile utilizando IA, com objetivo de aumentar o conhecimento Cientifico. Todas as respostas possiveis para sua questão.</p>
                 </div>
             </div>
 
