--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <a href="https://www.instagram.com/ricx_f.n?igsh=MTYwM2twYTNvNTFwNA==" class="menu-link">Social</a>
             </li>
             <li>
-                <a href="https://drive.google.com/file/d/1FozmTAmapZraU1lWHh_CAA94EoZ4rBRC/view?usp=sharing" class="menu-link">Curriculum Vitae</a>
+                <a href="https://drive.google.com/file/d/1FozmTAmapZraU1lWHh_CAA94EoZ4rBRC/view?usp=sharing"
+                    class="menu-link">Curriculum Vitae</a>
             </li>
         </ul>
     </nav>
@@ -45,8 +46,11 @@
         <h2 class="sobre-titulo">Sobre Mim</h2>
         <div class="sobre-caixa">
             <p class="sobre-paragrafo">
-                Olá, meu nome é Ricardo Bernardo, Engenheiro Informático com experiência em desenvolvimento de software e
-                criação de soluções tecnológicas inovadoras. Sou um Desenvolvimento Web, com projetos que vão desde sistemas de reservas a aplicativos móveis para recrutamento. Apaixonado por tecnologia, busco oportunidades para aplicar meu
+                Olá, meu nome é Ricardo Bernardo, Engenheiro Informático com experiência em desenvolvimento de software
+                e
+                criação de soluções tecnológicas inovadoras. Sou um Desenvolvimento Web, com projetos que vão desde
+                sistemas de reservas a aplicativos móveis para recrutamento. Apaixonado por tecnologia, busco
+                oportunidades para aplicar meu
                 conhecimento e crescer na área de desenvolvimento de software.
             </p>
         </div>
@@ -61,13 +65,13 @@
                 </a>
                 <div class="caixa-textos-projetos">
                     <h3 class="info-projetos">Projeto Mobile com Cordova</h3>
-                    <p class="paragrafo-projeto">Uma app de recruta de funcionarios com IA, com intuito de abrangir o
-                        mercado de Recursos Humanos e deixar a produtividadde no topo.</p>
+                    <p class="paragrafo-projeto">Uma app de recruta de funcionarios com IA, com intuito de abrangir o mercado de Recursos Humanos e deixar a produtividadde no topo.</p>
                 </div>
             </div>
 
             <div class="projetos-card">
-                <a href="https://github.com/RICX-FN/FN/tree/main/PT%20COD%20MORSE" target="_blank" class="projeto-imagem">
+                <a href="https://github.com/RICX-FN/FN/tree/main/PT%20COD%20MORSE" target="_blank"
+                    class="projeto-imagem">
                     <img src="./img/p-morse.png" alt="projeto2" class="projeto-imagem">
                 </a>
                 <div class="caixa-textos-projetos">
@@ -77,10 +81,13 @@
             </div>
 
             <div class="projetos-card">
-                <img src="./img/p-IA.png" alt="projeto3" class="projeto-imagem">
+                <a href="#" target="_blank"
+                    class="projeto-imagem"></a>
+                <img src="./img/p-roadlert.png" alt="projeto3" class="projeto-imagem">
                 <div class="caixa-textos-projetos">
-                    <h3 class="info-projetos">IA Chat Cientifico</h3>
-                    <p class="paragrafo-projeto">Um chat Mobile utilizando IA, com objetivo de aumentar o conhecimento Cientifico. Todas as respostas possiveis para sua questão.</p>
+                    <h3 class="info-projetos">Road Alert</h3>
+                    <p class="paragrafo-projeto">Um App que permite que os usuários relatem incidentes rodoviários de forma rápida e eficiente, contribuindo para a segurança nas estradas.
+                    </p>
                 </div>
             </div>
 
@@ -88,7 +95,7 @@
     </section>
 
     <section id="contatos" class="contatos" onsubmit="enviarMensagem(event)">
-        <h2 class="contato-titulo">Entra em Contacto</h2>
+        <h2 class="contato-titulo">Entre em Contacto</h2>
 
         <form class="formulario-contato" id="formulario">
             <div class="grupo-form">
