roadalert site oficial

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                 </a>
                 <div class="caixa-textos-projetos">
                     <h3 class="info-projetos">Projeto Mobile com Cordova</h3>
-                    <p class="paragrafo-projeto">Uma app de recruta de funcionarios com IA, com intuito de abrangir o mercado de Recursos Humanos e deixar a produtividadde no topo.</p>
+                    <p class="paragrafo-projeto">Uma app de recruta de funcionarios com IA, com intuito de abrangir o
+                        mercado de Recursos Humanos e deixar a produtividadde no topo.</p>
                 </div>
             </div>
 
@@ -76,17 +77,30 @@
                 </a>
                 <div class="caixa-textos-projetos">
                     <h3 class="info-projetos">Alerta de codigo Morse em Python</h3>
-                    <p class="paragrafo-projeto">Este aplicativo consiste em exibir msg em morse que são digitados em português e também com aletas luminosos.</p>
+                    <p class="paragrafo-projeto">Este aplicativo consiste em exibir msg em morse que são digitados em
+                        português e também com aletas luminosos.</p>
                 </div>
             </div>
 
             <div class="projetos-card">
-                <a href="#" target="_blank"
-                    class="projeto-imagem"></a>
+                <a href="#" target="_blank" class="projeto-imagem"></a>
                 <img src="./img/p-roadlert.png" alt="projeto3" class="projeto-imagem">
                 <div class="caixa-textos-projetos">
                     <h3 class="info-projetos">Road Alert</h3>
-                    <p class="paragrafo-projeto">Um App que permite que os usuários relatem incidentes rodoviários de forma rápida e eficiente, contribuindo para a segurança nas estradas.
+                    <p class="paragrafo-projeto">Um App que permite que os usuários relatem incidentes rodoviários de
+                        forma rápida e eficiente, contribuindo para a segurança nas estradas.
+                    </p>
+                </div>
+            </div>
+
+            <div class="projetos-card">
+                <a href="https://ricx-fn.github.io/roadalert/" target="_blank" class="projeto-imagem"></a>
+                <img src="./img/roadalert-site.png" alt="projeto2" class="projeto-imagem">
+                <div class="caixa-textos-projetos">
+                    <h3 class="info-projetos">Road Alert Site Oficial</h3>
+                    <p class="paragrafo-projeto">Baixe agora, site disponivel! Um App que permite que os usuários
+                        relatem incidentes rodoviários de forma rápida e eficiente, contribuindo para a segurança nas
+                        estradas.
                     </p>
                 </div>
             </div>
