alteração na foto de perfil

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
 
     <main id="inicio" class="cabecalho">
-        <img src="./img/eu.png" alt="foto de foto-perfil" class="foto-perfil">
+        <img src="./img/eu.jpg" alt="foto de foto-perfil" class="foto-perfil">
         <h1>Ricardo Bernardo</h1>
         <p class="cabecalho-sub-titulo">Desenvolvedor Front-end</p>
     </main>
