--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h2 class="sobre-titulo">Sobre Mim</h2>
         <div class="sobre-caixa">
             <p class="sobre-paragrafo">
-                Olá, meu nome é Ricardo Bernardo, Engenheiro Informático com experiência em desenvolvimento de software
+                Olá, meu nome é Ricardo Bernardo, Tecnico Informático com experiência em desenvolvimento de software
                 e
                 criação de soluções tecnológicas inovadoras. Sou um Desenvolvimento Web, com projetos que vão desde
                 sistemas de reservas a aplicativos móveis para recrutamento. Apaixonado por tecnologia, busco
