--- a/index.html
+++ b/index.html
@@ -59,78 +59,83 @@
     <section id="projetos" class="projetos">
         <h2 class="projetos-titulo">Meus Projetos</h2>
         <div class="projetos-caixa">
+
             <div class="projetos-card">
                 <a href="https://github.com/RICX-FN/YouTube" target="_blank" class="projeto-imagem">
                     <img src="./img/youtube.png" alt="projeto1" class="projeto-imagem">
                 </a>
+
                 <div class="caixa-textos-projetos">
                     <h3 class="info-projetos">Replica da interface principal do YouTube</h3>
                     <p class="paragrafo-projeto">Repliquei a interface do YouTube, aplicando conceitos de grid e flex
                         layout.</p>
                 </div>
+            </div>
 
-                <div class="projetos-card">
-                    <a href="https://github.com/RICX-FN/Calculadora" target="_blank" class="projeto-imagem">
-                        <img src="./img/calculadora.png" alt="projeto1" class="projeto-imagem">
-                    </a>
-                    <div class="caixa-textos-projetos">
-                        <h3 class="info-projetos">Calculadora com Tema Claro e Escuro.</h3>
-                        <p class="paragrafo-projeto">Uma calculadora web moderna e responsiva com tema claro/escuro, desenvolvida com HTML, CSS e JavaScript vanilla.</p>
-                    </div>
+            <div class="projetos-card">
+                <a href="https://github.com/RICX-FN/Calculadora" target="_blank" class="projeto-imagem">
+                    <img src="./img/calculadora.png" alt="projeto1" class="projeto-imagem">
+                </a>
 
-                    <div class="projetos-card">
-                        <a href="https://github.com/RICX-FN/FN/tree/main/PF13/pf13" target="_blank"
-                            class="projeto-imagem">
-                            <img src="./img/p-mobile.png" alt="projeto1" class="projeto-imagem">
-                        </a>
-                        <div class="caixa-textos-projetos">
-                            <h3 class="info-projetos">Projeto Mobile com Cordova</h3>
-                            <p class="paragrafo-projeto">Uma app de recruta de funcionarios com IA, com intuito de
-                                abrangir o
-                                mercado de Recursos Humanos e deixar a produtividadde no topo.</p>
-                        </div>
-                    </div>
-
-                    <div class="projetos-card">
-                        <a href="https://github.com/RICX-FN/FN/tree/main/PT%20COD%20MORSE" target="_blank"
-                            class="projeto-imagem">
-                            <img src="./img/p-morse.png" alt="projeto2" class="projeto-imagem">
-                        </a>
-                        <div class="caixa-textos-projetos">
-                            <h3 class="info-projetos">Alerta de codigo Morse em Python</h3>
-                            <p class="paragrafo-projeto">Este aplicativo consiste em exibir msg em morse que são
-                                digitados em
-                                português e também com aletas luminosos.</p>
-                        </div>
-                    </div>
-
-                    <div class="projetos-card">
-                        <a href="#" target="_blank" class="projeto-imagem"></a>
-                        <img src="./img/p-roadlert.png" alt="projeto3" class="projeto-imagem">
-                        <div class="caixa-textos-projetos">
-                            <h3 class="info-projetos">Road Alert</h3>
-                            <p class="paragrafo-projeto">Um App que permite que os usuários relatem incidentes
-                                rodoviários de
-                                forma rápida e eficiente, contribuindo para a segurança nas estradas.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="projetos-card">
-                        <a href="https://ricx-fn.github.io/roadalert/" target="_blank" class="projeto-imagem"></a>
-                        <img src="./img/roadalert-site.png" alt="projeto2" class="projeto-imagem">
-                        <div class="caixa-textos-projetos">
-                            <h3 class="info-projetos">Road Alert Site Oficial</h3>
-                            <p class="paragrafo-projeto">Baixe agora, site disponivel! Um App que permite que os
-                                usuários
-                                relatem incidentes rodoviários de forma rápida e eficiente, contribuindo para a
-                                segurança nas
-                                estradas.
-                            </p>
-                        </div>
-                    </div>
-
+                <div class="caixa-textos-projetos">
+                    <h3 class="info-projetos">Calculadora com Tema Claro e Escuro.</h3>
+                    <p class="paragrafo-projeto">Uma calculadora web moderna e responsiva com tema claro/escuro,
+                        desenvolvida com HTML, CSS e JavaScript vanilla.</p>
                 </div>
+            </div>
+
+            <div class="projetos-card">
+                <a href="https://github.com/RICX-FN/FN/tree/main/PF13/pf13" target="_blank" class="projeto-imagem">
+                    <img src="./img/p-mobile.png" alt="projeto1" class="projeto-imagem">
+                </a>
+                <div class="caixa-textos-projetos">
+                    <h3 class="info-projetos">Projeto Mobile com Cordova</h3>
+                    <p class="paragrafo-projeto">Uma app de recruta de funcionarios com IA, com intuito de
+                        abrangir o
+                        mercado de Recursos Humanos e deixar a produtividadde no topo.</p>
+                </div>
+            </div>
+
+            <div class="projetos-card">
+                <a href="https://github.com/RICX-FN/FN/tree/main/PT%20COD%20MORSE" target="_blank"
+                    class="projeto-imagem">
+                    <img src="./img/p-morse.png" alt="projeto2" class="projeto-imagem">
+                </a>
+                <div class="caixa-textos-projetos">
+                    <h3 class="info-projetos">Alerta de codigo Morse em Python</h3>
+                    <p class="paragrafo-projeto">Este aplicativo consiste em exibir msg em morse que são
+                        digitados em
+                        português e também com aletas luminosos.</p>
+                </div>
+            </div>
+
+            <div class="projetos-card">
+                <a href="#" target="_blank" class="projeto-imagem"></a>
+                <img src="./img/p-roadlert.png" alt="projeto3" class="projeto-imagem">
+                <div class="caixa-textos-projetos">
+                    <h3 class="info-projetos">Road Alert</h3>
+                    <p class="paragrafo-projeto">Um App que permite que os usuários relatem incidentes
+                        rodoviários de
+                        forma rápida e eficiente, contribuindo para a segurança nas estradas.
+                    </p>
+                </div>
+            </div>
+
+            <div class="projetos-card">
+                <a href="https://ricx-fn.github.io/roadalert/" target="_blank" class="projeto-imagem"></a>
+                <img src="./img/roadalert-site.png" alt="projeto2" class="projeto-imagem">
+                <div class="caixa-textos-projetos">
+                    <h3 class="info-projetos">Road Alert Site Oficial</h3>
+                    <p class="paragrafo-projeto">Baixe agora, site disponivel! Um App que permite que os
+                        usuários
+                        relatem incidentes rodoviários de forma rápida e eficiente, contribuindo para a
+                        segurança nas
+                        estradas.
+                    </p>
+                </div>
+            </div>
+
+        </div>
     </section>
 
     <section id="contatos" class="contatos" onsubmit="enviarMensagem(event)">
