add new link cv

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="https://www.instagram.com/ricx_f.n?igsh=MTYwM2twYTNvNTFwNA==" class="menu-link">Social</a>
             </li>
             <li>
-                <a href="https://drive.google.com/file/d/1FozmTAmapZraU1lWHh_CAA94EoZ4rBRC/view?usp=sharing"
+                <a href="https://docs.google.com/document/d/1uJuiYDf25u2Lnm_zQBuOLQei7Awa7F2Ifh8LSsyXrWI/edit?usp=sharing"
                     class="menu-link">Curriculum Vitae</a>
             </li>
         </ul>
