Update index.html add card facilita

--- a/index.html
+++ b/index.html
@@ -117,14 +117,13 @@
             </div>
 
             <div class="projetos-card">
-                <a href="https://github.com/RICX-FN/FN/tree/main/PF13/pf13" target="_blank" class="projeto-imagem">
-                    <img src="./img/p-mobile.png" alt="projeto1" class="projeto-imagem">
+                <a href="https://github.com/RICX-FN/FN/tree/main/Facilita" target="_blank" class="projeto-imagem">
+                    <img src="./img/facilita.png" alt="projeto1" class="projeto-imagem">
                 </a>
+
                 <div class="caixa-textos-projetos">
-                    <h3 class="info-projetos">Projeto Mobile com Cordova</h3>
-                    <p class="paragrafo-projeto">Uma app de recruta de funcionarios com IA, com intuito de
-                        abrangir o
-                        mercado de Recursos Humanos e deixar a produtividadde no topo.</p>
+                    <h3 class="info-projetos">Facilita.</h3>
+                    <p class="paragrafo-projeto">Um portal onde os usuarios residentes em Angola possam obter informações sobre documentação necessaria para determinados orgãos Publicos e Privados.</p>
                 </div>
             </div>
 
@@ -138,9 +137,21 @@
                         proveniente do Figma.</p>
                 </div>
             </div>
-
+            <!-- Projetos ocultos -->
             <div id="more-card" class="more-cards" class="projetos-caixa">
 
+                <div class="projetos-card">
+                    <a href="https://github.com/RICX-FN/FN/tree/main/PF13/pf13" target="_blank" class="projeto-imagem">
+                        <img src="./img/p-mobile.png" alt="projeto1" class="projeto-imagem">
+                    </a>
+                    <div class="caixa-textos-projetos">
+                        <h3 class="info-projetos">Projeto Mobile com Cordova</h3>
+                        <p class="paragrafo-projeto">Uma app de recruta de funcionarios com IA, com intuito de
+                            abrangir o
+                            mercado de Recursos Humanos e deixar a produtividadde no topo.</p>
+                    </div>
+                </div>
+                
                 <div class="projetos-card">
                     <a href="https://github.com/RICX-FN/FN/tree/main/PT%20COD%20MORSE" target="_blank"
                         class="projeto-imagem">
