Adicionei novos cards
add novos cards e ajustei as funcionalidades do btn ocultar e mostrar mais

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
         <h2 class="projetos-titulo">Meus Projetos</h2>
         <div class="projetos-caixa">
 
+            <!-- Projeto RoadAlert APP Mobile -->
+            
             <div class="projetos-card">
                 <a href="#" target="_blank" class="projeto-imagem"></a>
                 <img src="./img/p-roadlert.png" alt="projeto3" class="projeto-imagem">
@@ -77,6 +79,8 @@
                     </p>
                 </div>
             </div>
+
+            <!-- Projeto ROADALERT Site Oficial -->
 
             <div class="projetos-card">
                 <a href="https://ricx-fn.github.io/roadalert/" target="_blank" class="projeto-imagem"></a>
@@ -92,6 +96,8 @@
                 </div>
             </div>
 
+            <!-- Projeto Youtube Home Page -->
+
             <div class="projetos-card">
                 <a href="https://github.com/RICX-FN/YouTube" target="_blank" class="projeto-imagem">
                     <img src="./img/youtube.png" alt="projeto1" class="projeto-imagem">
@@ -103,6 +109,8 @@
                         layout.</p>
                 </div>
             </div>
+
+            <!-- Projeto Calculadora -->
 
             <div class="projetos-card">
                 <a href="https://github.com/RICX-FN/Calculadora" target="_blank" class="projeto-imagem">
@@ -116,6 +124,8 @@
                 </div>
             </div>
 
+            <!-- Projeto Facilita -->
+
             <div class="projetos-card">
                 <a href="https://github.com/RICX-FN/FN/tree/main/Facilita" target="_blank" class="projeto-imagem">
                     <img src="./img/facilita.png" alt="projeto1" class="projeto-imagem">
@@ -127,6 +137,8 @@
                 </div>
             </div>
 
+            <!-- Projeto Tela de Login Arcade -->
+
             <div class="projetos-card">
                 <a href="https://github.com/RICX-FN/Login-arcade" target="_blank" class="projeto-imagem">
                     <img src="./img/login-arcade.png" alt="projeto4" class="projeto-imagem">
@@ -137,8 +149,12 @@
                         proveniente do Figma.</p>
                 </div>
             </div>
+
             <!-- Projetos ocultos -->
+
             <div id="more-card" class="more-cards" class="projetos-caixa">
+
+                <!-- Projeto Mobile Com Python e Cordova-->
 
                 <div class="projetos-card">
                     <a href="https://github.com/RICX-FN/FN/tree/main/PF13/pf13" target="_blank" class="projeto-imagem">
@@ -151,6 +167,8 @@
                             mercado de Recursos Humanos e deixar a produtividadde no topo.</p>
                     </div>
                 </div>
+
+                <!-- Projeto Código Morse -->
                 
                 <div class="projetos-card">
                     <a href="https://github.com/RICX-FN/FN/tree/main/PT%20COD%20MORSE" target="_blank"
