--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <p class="stack">
             <a href="https://skillicons.dev">
-                <img src="https://skillicons.dev/icons?i=html,css,js,git,vscode,ubuntu" />
+                <img src="https://skillicons.dev/icons?i=html,css,js,react,typescript,git,vscode,ubuntu" />
             </a>
         </p>
     </main>
@@ -211,5 +211,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
