--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main id="inicio" class="cabecalho">
         <img src="./img/eu.jpg" alt="foto de foto-perfil" class="foto-perfil">
         <h1>Ricardo Bernardo</h1>
-        <p class="cabecalho-sub-titulo">Desenvolvedor Front-end</p>
+        <p class="cabecalho-sub-titulo">Desenvolvedor Frontend</p>
 
         <p class="stack">
             <a href="https://skillicons.dev">
@@ -214,3 +214,4 @@
 
 
 </html>
+
